untangle-development-build (5.1.0~svn20071115r12792-1sid) qa; urgency=low

  * auto build

 -- Sebastien Delafond <seb@debian.org>  Thu, 15 Nov 2007 16:44:38 -0800

untangle-development-build (5.0.1-1) mustang-1; urgency=low

  * auto build

 --  <seb@untangle.com>  Fri, 27 Jul 2007 14:41:55 -0700

untangle-development-build (0-67) mustang; urgency=low

  * auto build

 -- root <root.com>  Sun,  3 Jun 2007 15:01:59 -0700

untangle-development-build (0-66) mustang; urgency=low

  * auto build

 -- root <root.com>  Sun,  3 Jun 2007 15:01:21 -0700

untangle-development-build (0-65) mustang; urgency=low

  * auto build

 -- root <root.com>  Sun,  3 Jun 2007 15:00:19 -0700

untangle-development-build (0-64) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Wed,  9 May 2007 19:23:27 -0700

untangle-development-build (0-63) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Wed,  9 May 2007 19:13:36 -0700

untangle-development-build (0-62) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Mon,  7 May 2007 20:10:51 -0700

untangle-development-build (0-61) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Mon,  7 May 2007 20:10:19 -0700

untangle-development-build (0-60) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Mon,  7 May 2007 11:53:01 -0700

untangle-development-build (0-59) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Mon,  7 May 2007 10:30:14 -0700

untangle-development-build (0-58) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Mon,  7 May 2007 10:27:54 -0700

untangle-development-build (0-57) mustang; urgency=low

  * auto build

 -- Sebastien Delafond <seb@untangle.com>  Mon,  7 May 2007 10:27:40 -0700

untangle-development-build (0-56) mustang; urgency=low

  * auto build
