@@ -8,7 +8,7 @@ Standards-Version: 3.8.0
 
 Package: untangle-development-runtime
 Architecture: all
-Depends: at, bridge-utils, curl, db4.2-util, dnsmasq, ebtables, ethtool, iptables (>= 1.3.6), iputils-ping, jruby1.0, libc6 (>= 2.3.2), libdbd-pg-ruby, libgettext-ruby, libsysfs1 | libsysfs2, libxml2 (>= 2.6.16), exim4-daemon-light | mail-transport-agent, mime-support, net-tools, openssl, openvpn, pciutils, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, pppoe, ruby, sg3-utils, sudo, sun-java6-jre, untangle-clamav-config, untangle-cli-client, untangle-cli-server, untangle-ddclient-config, untangle-dhclient-config, untangle-ldap-server, libnetfilter-conntrack1 (>= 0.0.81) | untangle-libnetfilter-conntrack1 (>= 0.0.81), untangle-libnetfilter-queue0 (>= 0.0.15), libnfnetlink0 (>= 0.0.30) | untangle-libnfnetlink0 (>= 0.0.30), untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, untangle-linux-image, untangle-net-alpaca, untangle-nsis-addons, untangle-postgresql-config, untangle-snmpd-config, untangle-snort-rules, untangle-spamassassin-update, untangle-ujac2pdf, web-browser | firefox | iceweasel, libgpgme-ruby, dash, untangle-apache2-config, python2.5-pycurl|python2.4-pycurl|python2.3-pycurl, gettext, libwww-mechanize-ruby, lockfile-progs, untangle-keyring, xutils-dev | xutils, python-egenix-mxdatetime, python-psycopg
+Depends: at, bridge-utils, curl, db4.2-util, dnsmasq, ebtables, ethtool, iptables (>= 1.3.6), iputils-ping, jruby1.0, libc6 (>= 2.3.2), libdbd-pg-ruby, libgettext-ruby, libsysfs1 | libsysfs2, libxml2 (>= 2.6.16), exim4-daemon-light | mail-transport-agent, mime-support, net-tools, openssl, openvpn, pciutils, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, pppoe, ruby, sg3-utils, sudo, sun-java6-jre, untangle-clamav-config, untangle-cli-client, untangle-cli-server, untangle-ddclient-config, untangle-dhclient-config, untangle-ldap-server, libnetfilter-conntrack1 (>= 0.0.81) | untangle-libnetfilter-conntrack1 (>= 0.0.81), untangle-libnetfilter-queue0 (>= 0.0.15), libnfnetlink0 (>= 0.0.30) | untangle-libnfnetlink0 (>= 0.0.30), untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, untangle-linux-image, untangle-net-alpaca, untangle-nsis-addons, untangle-postgresql-config, untangle-snmpd-config, untangle-snort-rules, untangle-spamassassin-update, untangle-ujac2pdf, web-browser | firefox | iceweasel, libgpgme-ruby, dash, untangle-apache2-config, python2.5-pycurl|python2.4-pycurl|python2.3-pycurl, gettext, libwww-mechanize-ruby, lockfile-progs, untangle-keyring, xutils-dev | xutils, python-egenix-mxdatetime, python-psycopg, python-lxml
 Description: Untangle Development Runtime Environment
  The Untangle Development Runtime Environment. Contains all packages
  needed to support running the Untangle Gateway in development mode.
