@@ -1,3 +1,9 @@
+untangle-development-runtime (6.3.0~svn20090220r22108mylittlepony-1lenny) chaos-release62; urgency=low
+
+  * auto build
+
+ -- root <seb@untangle.com>  Tue, 12 May 2009 01:19:42 -0700
+
 untangle-development-runtime (5.0.1-1) mustang-1; urgency=low
 
   * auto build
