@@ -1,3 +1,9 @@
+untangle-development-build (6.3.0~svn20081030r19946mylittlepony-1lenny) chaos-release62; urgency=low
+
+  * auto build
+
+ -- root <seb@untangle.com>  Tue, 12 May 2009 01:18:50 -0700
+
 untangle-development-build (5.1.0~svn20071115r12792-1sid) qa; urgency=low
 
   * auto build
